Fix critical version mismatch and clarify parallelism in Lab 3
CRITICAL: Version Mismatch Fixed
- Updated images from 0.7.1 to 0.8.0 in deployment YAML
- v0.7.1 does NOT support K8s-native EndpointSlice discovery
- Without NATS in v0.7.1, workers cannot discover each other
- v0.8.0 required for K8s-native mode taught in this lab

Clarified Data Parallelism vs Tensor Parallelism:
- Added configuration notes before deployment
- replicas: 2 with tensor-parallel-size: 1 = Data Parallelism
- Creates 2 independent workers (not 1 model split across 2 GPUs)
- Workers share KV cache via NIXL (cache sharing benefit)
- Prevents confusion about what 'distributed' means here

Updated Echo Messages:
- Removed 'will use NATS' references
- Changed to 'data parallelism with KV cache sharing via NIXL'
- Accurately describes K8s-native coordination

Also cleaned up Additional Resources section from previous commit.

--- a/03-grove-distributed-serving.ipynb
+++ b/03-grove-distributed-serving.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c12b1495",
+   "id": "943d5424",
    "metadata": {},
    "source": [
     "# Lab 3: Distributed Dynamo with Multi-GPU/Multi-Node Serving\n",
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06eb0579",
+   "id": "26835ff3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bc76b4c",
+   "id": "d2b751cc",
    "metadata": {},
    "source": [
     "---\n",
@@ -220,13 +220,18 @@
     "\n",
     "### Step 1: Create Distributed Dynamo Deployment\n",
     "\n",
-    "We'll create a deployment with 2 workers to demonstrate distributed architecture and KV-aware routing:"
+    "We'll create a deployment with 2 workers to demonstrate distributed architecture and KV-aware routing:\n",
+    "\n",
+    "**Configuration Notes:**\n",
+    "- **Data Parallelism**: `replicas: 2` with `tensor-parallel-size: 1` creates 2 independent workers that share KV cache via NIXL\n",
+    "- **Not Tensor Parallelism**: Each worker loads the full model on 1 GPU (not splitting 1 model across 2 GPUs)\n",
+    "- **K8s-Native Discovery**: Workers register via Kubernetes EndpointSlices (v0.8.0+)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fec6575e",
+   "id": "c11ad3ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +253,7 @@
     "      replicas: 1\n",
     "      extraPodSpec:\n",
     "        mainContainer:\n",
-    "          image: nvcr.io/nvidia/ai-dynamo/vllm-runtime:0.7.1\n",
+    "          image: nvcr.io/nvidia/ai-dynamo/vllm-runtime:0.8.0\n",
     "    VllmWorker:\n",
     "      envFromSecret: hf-token-secret\n",
     "      dynamoNamespace: vllm-distributed-demo\n",
@@ -267,7 +272,7 @@
     "            path: /data/huggingface-cache\n",
     "            type: DirectoryOrCreate\n",
     "        mainContainer:\n",
-    "          image: nvcr.io/nvidia/ai-dynamo/vllm-runtime:0.7.1\n",
+    "          image: nvcr.io/nvidia/ai-dynamo/vllm-runtime:0.8.0\n",
     "          securityContext:\n",
     "            capabilities:\n",
     "              add:\n",
@@ -286,12 +291,12 @@
     "echo \"\"\n",
     "echo \"✓ Distributed Dynamo deployment created\"\n",
     "echo \"  Deployment: vllm-distributed-demo\"\n",
-    "echo \"  Workers: 2 (will use NATS for coordination and NIXL for cache transfer)\""
+    "echo \"  Workers: 2 (data parallelism with KV cache sharing via NIXL)\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0eec2929",
+   "id": "93d6e76b",
    "metadata": {},
    "source": [
     "### Step 2: Create NodePort Service\n",
@@ -302,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95c854ca",
+   "id": "c49d6569",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2caaedf",
+   "id": "68fe8371",
    "metadata": {},
    "source": [
     "### Step 3: Wait for Deployment"
@@ -343,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6c35e4e",
+   "id": "3da585ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "caa42057",
+   "id": "71671252",
    "metadata": {},
    "source": [
     "### Step 4: Test Inference"
@@ -379,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93486bd3",
+   "id": "11e9d97d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f70a5cd",
+   "id": "03a22d3d",
    "metadata": {},
    "source": [
     "---\n",
@@ -419,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bde06bf8",
+   "id": "fb144428",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4718f0e",
+   "id": "486f499e",
    "metadata": {},
    "source": [
     "### Step 2: Test Distributed Dynamo with Traffic\n",
@@ -456,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bef7c8ff",
+   "id": "293c0f2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fccd0810",
+   "id": "bb22f2c6",
    "metadata": {},
    "source": [
     "---\n",
@@ -608,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34672a06",
+   "id": "05922338",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +644,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbd2e2df",
+   "id": "fea914c2",
    "metadata": {},
    "source": [
     "**Note**: Cache hit/miss metrics depend on workload patterns. Even on a single node with multiple GPUs, KV-aware routing can improve cache hits by directing requests to the worker that already has relevant cache blocks.\n",
@@ -652,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0172c29d",
+   "id": "839385a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -668,7 +673,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "110dbb25",
+   "id": "a12ba126",
    "metadata": {},
    "source": [
     "### etcd Health Check\n",
@@ -679,7 +684,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b9c8de6",
+   "id": "92772f5b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,7 +708,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa408fd1",
+   "id": "63fde0c7",
    "metadata": {},
    "source": [
     "---\n",
@@ -716,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "889df488",
+   "id": "4616f9aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -733,7 +738,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d764aea9",
+   "id": "ef85c404",
    "metadata": {},
    "source": [
     "### Step 2: Verify Lab 1 Deployment is Still Running\n",
@@ -744,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "222fef8a",
+   "id": "6dfab674",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -769,7 +774,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "543e582e",
+   "id": "580c86c8",
    "metadata": {},
    "source": [
     "---\n",
@@ -874,7 +879,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a234321a",
+   "id": "a0f522b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -897,7 +902,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e35bd92",
+   "id": "563bf2a4",
    "metadata": {},
    "source": [
     "### Workers Not Discovered"
@@ -906,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c837a65d",
+   "id": "838f08c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -930,7 +935,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eed47104",
+   "id": "264c2c7c",
    "metadata": {},
    "source": [
     "### No Requests Reaching Workers"
@@ -939,7 +944,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d53bf29",
+   "id": "4b6a917e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -962,7 +967,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b109ac72",
+   "id": "5ba09bc8",
    "metadata": {},
    "source": [
     "### Understanding Cache Sharing with NIXL\n",
@@ -1103,7 +1108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69308cf9",
+   "id": "977075ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1138,7 +1143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a531ed9",
+   "id": "e019d822",
    "metadata": {},
    "source": [
     "### Step 2: Install etcd Coordination Layer\n",
@@ -1149,7 +1154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e0208c0",
+   "id": "b353db94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1181,7 +1186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ba19925",
+   "id": "de179c3e",
    "metadata": {},
    "source": [
     "### Step 3: Verify Infrastructure\n",
@@ -1192,7 +1197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2752a16d",
+   "id": "05551ddd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1225,7 +1230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd442da8",
+   "id": "14c90516",
    "metadata": {},
    "source": [
     "### Step 4: Enable Prometheus Monitoring (Optional)\n",
@@ -1236,7 +1241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c665510c",
+   "id": "92daba8c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1286,7 +1291,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "161d6bc2",
+   "id": "df693f0f",
    "metadata": {},
    "source": [
     "### Cleanup (NATS/etcd)\n",
@@ -1297,7 +1302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3fdae949",
+   "id": "cb251f9d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1322,7 +1327,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80f448c1",
+   "id": "8672f759",
    "metadata": {},
    "source": [
     "### Configuring Dynamo to Use NATS/etcd\n",
@@ -1343,21 +1348,28 @@
     "\n",
     "## Additional Resources\n",
     "\n",
-    "- **Dynamo Deployment Guide**: https://docs.nvidia.com/dynamo/latest/guides/dynamo_deploy/\n",
-    "- **Grove Operator Guide**: https://docs.nvidia.com/dynamo/latest/guides/dynamo_deploy/grove.html\n",
-    "- **Grove GitHub Repository**: https://github.com/NVIDIA/grove\n",
-    "- **NIXL Documentation**: NVIDIA Inference Transfer Library (check Dynamo docs)\n",
+    "### Core Documentation\n",
+    "\n",
+    "- **NVIDIA Dynamo Documentation**: https://docs.nvidia.com/dynamo/latest/\n",
+    "- **Dynamo Deployment Guide**: https://docs.nvidia.com/dynamo/latest/kubernetes/deployment/\n",
+    "- **Grove Operator Guide**: https://docs.nvidia.com/dynamo/latest/kubernetes/grove.html\n",
+    "- **Dynamo v0.8.0 Release Notes**: https://github.com/ai-dynamo/dynamo/releases/tag/v0.8.0\n",
+    "\n",
+    "### Advanced Topics (NATS/etcd - Optional)\n",
+    "\n",
     "- **NATS Documentation**: https://docs.nats.io/\n",
     "- **etcd Documentation**: https://etcd.io/docs/\n",
-    "- **NVIDIA Dynamo Documentation**: https://docs.nvidia.com/dynamo/latest/\n",
-    "- **Distributed Systems Patterns**: Understanding consensus and coordination\n",
-    "- **KV Cache Architecture**: Understanding distributed cache strategies\n",
+    "\n",
+    "### Community Resources\n",
+    "\n",
+    "- **Dynamo GitHub**: https://github.com/ai-dynamo/dynamo\n",
+    "- **NVIDIA Developer Forums**: https://forums.developer.nvidia.com/\n",
     "\n",
     "---\n",
     "\n",
     "**Congratulations! You've completed Lab 3: Distributed Dynamo with Grove Orchestration** 🌲\n",
     "\n",
-    "You now understand the fundamentals of distributed LLM serving, the difference between Grove (operator) and Dynamo (serving framework), and how NATS (metadata) and NIXL (data transfer) work together for distributed coordination!"
+    "You now understand the fundamentals of distributed LLM serving, the difference between Grove (operator) and Dynamo (serving framework), and how K8s-native discovery enables distributed coordination!"
    ]
   }
  ],
