Fix critical version mismatch in Lab 2 and Lab 1 appendix
CRITICAL: Lab 2 Version Mismatch Fixed
- Changed RELEASE_VERSION from 0.7.1 to 0.8.0 (line 67)
- Lab 2 introduces v0.8.0-specific features:
  * Section 5: Planner Observability Dashboard
  * Section 6: Unified Tracing with OpenTelemetry
- Running v0.7.1 would make these features unavailable
- Users would get confusing 'No data' or missing metrics

Lab 1 Appendix Consistency:
- Updated Appendix A6 (Production Deployment Checklist)
- Changed example RELEASE_VERSION from 0.7.1 to 0.8.0
- Ensures all examples use consistent v0.8.0 references

Impact:
- Lab 2 Planner metrics will now actually work
- OpenTelemetry tracing configuration will be compatible
- Consistent version across all three labs

--- a/02-monitoring-and-observability.ipynb
+++ b/02-monitoring-and-observability.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8bfccaeb",
+   "id": "514f5168",
    "metadata": {},
    "source": [
     "# Lab 1 Extension: Monitoring Dynamo with Prometheus and Grafana\n",
@@ -59,13 +59,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e7f9e84",
+   "id": "65e52e36",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
     "# Set environment variables (use defaults if not already set)\n",
-    "export RELEASE_VERSION=${RELEASE_VERSION:-0.7.1}\n",
+    "export RELEASE_VERSION=${RELEASE_VERSION:-0.8.0}\n",
     "export NAMESPACE=${NAMESPACE:-dynamo}\n",
     "export CACHE_PATH=${CACHE_PATH:-/data/huggingface-cache}\n",
     "\n",
@@ -96,10 +96,60 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c49602f3",
+   "id": "8659b41d",
    "metadata": {},
    "source": [
-    "### Step 2: Verify Monitoring Stack is Running\n",
+    "### Step 2: Verify Lab 1 Deployment is Running\n",
+    "\n",
+    "**IMPORTANT:** Lab 2 requires the deployment from Lab 1 to be running. Let's verify it:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19704ca8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "NAMESPACE=${NAMESPACE:-dynamo}\n",
+    "\n",
+    "echo \"Checking Lab 1 deployment...\"\n",
+    "echo \"\"\n",
+    "kubectl get dynamographdeployment -n $NAMESPACE\n",
+    "echo \"\"\n",
+    "kubectl get pods -n $NAMESPACE | grep vllm\n",
+    "echo \"\"\n",
+    "\n",
+    "# Check if deployment exists\n",
+    "if kubectl get dynamographdeployment vllm-disagg-router -n $NAMESPACE &>/dev/null; then\n",
+    "    echo \"✓ Lab 1 deployment found\"\n",
+    "    \n",
+    "    # Check if pods are ready\n",
+    "    READY_PODS=$(kubectl get pods -n $NAMESPACE | grep vllm | grep \"1/1\" | wc -l)\n",
+    "    if [ \"$READY_PODS\" -ge 2 ]; then\n",
+    "        echo \"✓ Deployment is healthy and ready to monitor\"\n",
+    "    else\n",
+    "        echo \"⚠️  Some pods are not ready yet. Wait for them to reach 1/1 Running status.\"\n",
+    "        echo \"   Re-run this cell to check status again.\"\n",
+    "    fi\n",
+    "else\n",
+    "    echo \"❌ Lab 1 deployment not found!\"\n",
+    "    echo \"\"\n",
+    "    echo \"Please complete Lab 1 first:\"\n",
+    "    echo \"  1. Go back to Lab 1\"\n",
+    "    echo \"  2. Complete Section 3: Deploy Distributed Model\"\n",
+    "    echo \"  3. Wait for pods to be ready (1/1 Running)\"\n",
+    "    echo \"  4. Return to this lab\"\n",
+    "fi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "508c5ee9",
+   "metadata": {},
+   "source": [
+    "### Step 3: Verify Monitoring Stack is Running\n",
     "\n",
     "Check that Prometheus and Grafana pods are running:"
    ]
@@ -107,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a62f1c1c",
+   "id": "b356b463",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b96d270",
+   "id": "2f7ed2ec",
    "metadata": {},
    "source": [
     "---\n",
@@ -156,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00b7e3a0",
+   "id": "c522850a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,67 +221,57 @@
   },
   {
    "cell_type": "markdown",
-   "id": "648475cf",
+   "id": "820ab488",
    "metadata": {},
    "source": [
-    "### Step 2: Check if PodMonitors Were Created\n",
+    "### Step 2: Verify PodMonitors for Prometheus\n",
     "\n",
-    "The Dynamo operator should automatically create PodMonitor resources:"
+    "PodMonitors tell Prometheus which pods to scrape for metrics. The Dynamo operator creates them automatically, but they need a label for cluster Prometheus to discover them."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0352b49d",
+   "id": "3f55aca8",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "# List PodMonitors in your namespace\n",
-    "echo \"PodMonitors in namespace $NAMESPACE:\"\n",
+    "NAMESPACE=${NAMESPACE:-dynamo}\n",
+    "\n",
+    "echo \"Checking PodMonitors...\"\n",
     "kubectl get podmonitor -n $NAMESPACE\n",
-    "\n",
     "echo \"\"\n",
-    "echo \"You should see PodMonitors for frontend and worker components\"\n",
-    "echo \"These are automatically discovered by the cluster Prometheus\""
+    "\n",
+    "# Check if PodMonitors exist\n",
+    "PODMONITOR_COUNT=$(kubectl get podmonitor -n $NAMESPACE 2>/dev/null | grep -c dynamo || echo \"0\")\n",
+    "\n",
+    "if [ \"$PODMONITOR_COUNT\" -gt 0 ]; then\n",
+    "    # Show configuration for one PodMonitor\n",
+    "    echo \"PodMonitor configuration (example: dynamo-frontend):\"\n",
+    "    kubectl get podmonitor dynamo-frontend -n $NAMESPACE -o jsonpath='{.spec}' | python3 -m json.tool\n",
+    "    echo \"\"\n",
+    "    \n",
+    "    # Ensure they have the required label for Prometheus discovery\n",
+    "    echo \"Labeling for Prometheus discovery...\"\n",
+    "    kubectl label podmonitor -n $NAMESPACE dynamo-frontend release=kube-prometheus-stack --overwrite 2>/dev/null || true\n",
+    "    kubectl label podmonitor -n $NAMESPACE dynamo-planner release=kube-prometheus-stack --overwrite 2>/dev/null || true\n",
+    "    kubectl label podmonitor -n $NAMESPACE dynamo-worker release=kube-prometheus-stack --overwrite 2>/dev/null || true\n",
+    "    \n",
+    "    echo \"\"\n",
+    "    echo \"✓ PodMonitors ready - Prometheus will scrape metrics within 1-2 minutes\"\n",
+    "else\n",
+    "    echo \"⚠️  PodMonitors not found - deployment may still be starting\"\n",
+    "    echo \"   Wait 30 seconds and re-run this cell\"\n",
+    "fi"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c8d586c7",
+   "id": "3c5ae6a5",
    "metadata": {},
    "source": [
-    "### Step 3: Label PodMonitors for Prometheus Discovery\n",
-    "\n",
-    "The cluster Prometheus requires PodMonitors to have a specific label. Let's add it:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "066b1e26",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "# Add the required label to Dynamo PodMonitors\n",
-    "echo \"Labeling PodMonitors for Prometheus discovery...\"\n",
-    "\n",
-    "kubectl label podmonitor -n $NAMESPACE dynamo-frontend release=kube-prometheus-stack --overwrite\n",
-    "kubectl label podmonitor -n $NAMESPACE dynamo-planner release=kube-prometheus-stack --overwrite\n",
-    "kubectl label podmonitor -n $NAMESPACE dynamo-worker release=kube-prometheus-stack --overwrite\n",
-    "\n",
-    "echo \"\"\n",
-    "echo \"✓ PodMonitors labeled - Prometheus will now discover and scrape metrics\"\n",
-    "echo \"  It may take 1-2 minutes for metrics to appear in Grafana\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1e1888b4",
-   "metadata": {},
-   "source": [
-    "### Step 4: Manually Test Metrics Endpoint\n",
+    "### Step 3: Test Metrics Endpoint \n",
     "\n",
     "Let's verify metrics are accessible:\n"
    ]
@@ -239,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04eb7849",
+   "id": "f83d23bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,10 +300,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4540f7a9",
+   "id": "ddb1ee08",
    "metadata": {},
    "source": [
-    "### Step 5: Send Test Traffic to Generate Metrics\n",
+    "### Step 4: Send Test Traffic to Generate Metrics\n",
     "\n",
     "Let's generate some traffic to populate metrics by sending requests to the Dynamo frontend:"
    ]
@@ -271,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99ef227f",
+   "id": "5cd1bb7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "082860e3",
+   "id": "4dcf689e",
    "metadata": {},
    "source": [
     "---\n",
@@ -331,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e1c8b64",
+   "id": "6b14b845",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +408,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c22132c4",
+   "id": "c7930517",
    "metadata": {},
    "source": [
     "---\n",
@@ -416,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "740664a5",
+   "id": "d7baed40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5cd25564",
+   "id": "83fad46c",
    "metadata": {},
    "source": [
     "---\n",
@@ -479,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a6030b1",
+   "id": "550aaa4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +596,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09eee937",
+   "id": "29c6b931",
    "metadata": {},
    "source": [
     "### Access Planner Dashboard"
@@ -565,21 +605,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d123005d",
+   "id": "4f7788c4",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
     "echo \"Grafana URL: $GRAFANA_URL\"\n",
-    "echo \"Username: admin\"\n",
-    "echo \"Password: prom-operator\"\n",
     "echo \"\"\n",
-    "echo \"Navigate to: Dashboards → Dynamo Planner Observability\""
+    "echo \"Navigate to: Dashboards → Dynamo Planner Observability\"\n",
+    "echo \"\"\n",
+    "echo \"(Anonymous access enabled - no login required)\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "cbc2b5fa",
+   "id": "dd3282da",
    "metadata": {},
    "source": [
     "### Key Planner Metrics\n",
@@ -622,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "254c38b8",
+   "id": "2b0551f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +688,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af458621",
+   "id": "3bfe144c",
    "metadata": {},
    "source": [
     "### What Tracing Shows You\n",
@@ -822,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b15f6de7",
+   "id": "6aaf7c4f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -861,7 +901,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fb8c4d7",
+   "id": "0812d06a",
    "metadata": {},
    "source": [
     "### Exercise 4: Cleanup Your Monitoring Resources\n",
@@ -872,7 +912,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab29252a",
+   "id": "efffaae8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -892,7 +932,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ef963b1",
+   "id": "76ebc940",
    "metadata": {},
    "source": [
     "---\n",
@@ -952,7 +992,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e67c25e2",
+   "id": "1e3e7a99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -971,7 +1011,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03d4f944",
+   "id": "74e1ad87",
    "metadata": {},
    "source": [
     "### Grafana Dashboard Not Appearing\n"
@@ -980,7 +1020,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4573b445",
+   "id": "c7a324fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -999,7 +1039,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1d6a96d",
+   "id": "41420aa0",
    "metadata": {},
    "source": [
     "### Can't Access Grafana\n"
@@ -1008,7 +1048,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eda562eb",
+   "id": "b6a8f286",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1023,7 +1063,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3b31d80",
+   "id": "1f75d3ca",
    "metadata": {},
    "source": [
     "### Port Forwards Not Working\n"
@@ -1032,7 +1072,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e914d10",
+   "id": "d3e223f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1047,7 +1087,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e86f706",
+   "id": "0440cffa",
    "metadata": {},
    "source": [
     "---\n",
