--- a/02-monitoring-and-observability.ipynb
+++ b/02-monitoring-and-observability.ipynb
@@ -1107,6 +1107,9 @@
    "formats": "ipynb,md",
    "main_language": "python",
    "notebook_metadata_filter": "jupytext,-kernelspec,-widgets,-language_info"
+  },
+  "language_info": {
+   "name": "python"
   }
  },
  "nbformat": 4,
