Fix RELEASE_VERSION variable not being set in CRD and platform installation cells

--- a/01-dynamo-deployment-guide.ipynb
+++ b/01-dynamo-deployment-guide.ipynb
@@ -362,6 +362,9 @@
    "outputs": [],
    "source": [
     "%%bash\n",
+    "# Set default RELEASE_VERSION if not already set\n",
+    "RELEASE_VERSION=${RELEASE_VERSION:-0.8.0}\n",
+    "\n",
     "# Check if CRDs already exist, install if not\n",
     "if kubectl get crd dynamographdeployments.nvidia.com &>/dev/null && \\\n",
     "   kubectl get crd dynamocomponentdeployments.nvidia.com &>/dev/null; then\n",
@@ -398,8 +401,14 @@
    "outputs": [],
    "source": [
     "%%bash\n",
+    "# Set defaults if not already set\n",
     "RELEASE_VERSION=${RELEASE_VERSION:-0.8.0}\n",
     "NAMESPACE=${NAMESPACE:-dynamo}\n",
+    "\n",
+    "echo \"Using configuration:\"\n",
+    "echo \"  RELEASE_VERSION: $RELEASE_VERSION\"\n",
+    "echo \"  NAMESPACE: $NAMESPACE\"\n",
+    "echo \"\"\n",
     "\n",
     "# Download platform chart\n",
     "echo \"Downloading Dynamo platform chart v$RELEASE_VERSION...\"\n",
@@ -1775,6 +1784,9 @@
    "formats": "ipynb,md",
    "main_language": "python",
    "notebook_metadata_filter": "jupytext,-kernelspec,-widgets,-language_info"
+  },
+  "language_info": {
+   "name": "python"
   }
  },
  "nbformat": 4,
